# play-c

./: .gitattributes  .gitignore  .gitmodules  README.md
aes/: CMakeLists.txt  README.md  aesConfig.h.in  main.c
bit_field/: CMakeLists.txt  README
bit_field/src/: main.c
cmake-tut/: CMakeLists.txt
cmake-tut/MathFunctions/: CMakeLists.txt  MakeTable.cxx  mysqrt.cxx
cmake-tut/src/: TutorialConfig.h.in  tutorial.cxx
fibonacci/: Makefile  README.md  fib.c  fib.h  main.c
hello-cmake/t1/: CMakeLists.txt  main.c
hello-cmake/t2/: CMakeLists.txt
hello-cmake/t2/src/: main.c
hello-cmake/t3/: CMakeLists.txt
hello-cmake/t3/src/: CMakeLists.txt
hello-cmake/t4/: CMakeLists.txt  runhello.sh
hello-cmake/t4/src/: CMakeLists.txt
hello-cmake/t5/: CMakeLists.txt
hello-cmake/t5/doc/: hello.txt
hello-cmake/t5/src/: CMakeLists.txt  main.c
mem/: CMakeLists.txt
mem/src/: main.c
preprocessor/: CMakeLists.txt
preprocessor/src/: main.c  myheader.h
punct/: Makefile  main.c
recursion/: CMakeLists.txt
recursion/src/: main  main.c
str/: CMakeLists.txt
str/src/: main.c
struct/: CMakeLists.txt
struct/src/: main.c
var-args/: CMakeLists.txt
var-args/src/: main.c
